--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@uniswap/v2-core": "^1.0.1",
     "dotenv": "^16.4.5",
     "eth-crypto": "^2.6.0",
+    "tronweb": "^6.0.0",
     "web3": "^4.8.0",
     "xlsx": "^0.18.5"
   }
